Added the tests for US20